# AI-Optimized-Massive-Scale-CI-CD

./: .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  LICENSE  Makefile  README.md  coverage.xml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml  python-package-conda.yml
configs/: model_config.yaml
github/workflows/: main.yml
scripts/: deploy.py  evaluate.py  miner.py  predict.py  train_model.py
src/pts/: __init__.py
src/pts/api/: models.py  routes.py  server.py
src/pts/core/: __init__.py  evaluator.py  predictor.py  trainer.py
src/pts/data/: __init__.py  collector.py  processor.py  validator.py
src/pts/features/: __init__.py  engineer.py  extractor.py  selector.py
src/pts/integrations/: __init__.py  github.py  gitlab.py  jenkins.py
src/pts/utils/: __init__.py  helpers.py  logger.py  metrics.py
tests/fixtures/: mock_services.py  sample_data.py
tests/integration/: test_api.py  test_end_to_end.py  test_integrations.py
tests/unit/: test_core.py  test_data.py  test_features.py
